<resources>
    <string name="app_name">Academy</string>
    <string name="age_limit">13+</string>
    <string name="title">Avengers: End Game</string>
    <string name="genre">Action, Adventure, Fantasy</string>
    <string name="views_count">125 Reviews</string>
    <string name="storyline_header">Storyline</string>
    <string name="storyline_description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="actor1_name">Robert Downey Jr.</string>
    <string name="actor2_name">Chris Evans</string>
    <string name="actor3_name">Mark Ruffalo</string>
    <string name="actor4_name">Chris Hemsworth</string>
    <string name="back">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_list">Movie list</string>
    <string name="film_duration">137 MIN</string>
</resources>